<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingBottom="8dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/photo_view"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/backgrounds/scenic"
        app:layout_constraintDimensionRatio="2:3"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/birthday_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/item_user_birthday_label"
        app:layout_constraintStart_toEndOf="@id/photo_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/birthday"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/photo_view"
        app:layout_constraintTop_toBottomOf="@id/birthday_label"
        android:layout_width="wrap_content"
        tools:text="2300.00.00" />

    <TextView
        android:id="@+id/wight_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_user_wight_label"
        app:layout_constraintStart_toEndOf="@id/photo_view"
        app:layout_constraintTop_toBottomOf="@id/birthday" />

    <TextView
        android:id="@+id/wight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/photo_view"
        app:layout_constraintTop_toBottomOf="@id/wight_label"
        tools:text="100kg" />

    <Button
        android:id="@+id/edit_button"
        style="?borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wight" />
</androidx.constraintlayout.widget.ConstraintLayout>
